Bug 204526 - User can access right click menu on chat window preview in settings, possibly crashing Kopete
Summary: User can access right click menu on chat window preview in settings, possibly...
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-20 14:26 UTC by Alvaro Manuel Recio Perez
Modified: 2009-08-22 18:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Manuel Recio Perez 2009-08-20 14:26:01 UTC
Version:            (using KDE 4.3.0)
Compiler:           x86_64 architecture
OS:                Linux
Installed from:    Ubuntu Packages

Kopete allow the user to change the chat window style. To aid the user, Kopete shows a chat window preview on "Settings" | "Chat window" | "Style". However, the user can right click on this preview and get realistic context menus. This way, the user can even save the avatar image of the preview user or try to close the chat window. Selecting that option crashes Kopete immediately.

I think Kopete shouldn't allow right clicking on the chat preview window or, if it does, disable those context menus. At least, Kopete shouldn't crash.
Comment 1 Detlev Casanova 2009-08-20 16:08:39 UTC
Backtrace :
Thread 1 (Thread 0x7fc73007e760 (LWP 4352)):
[KCrash Handler]
#5  0x00007fc71f807016 in ChatMessagePart::slotCloseView (this=0x2db4700, force=false) at /var/tmp/portage/kde-base/kopete-4.3.0/work/kopete-4.3.0/kopete/kopete/chatwindow/chatmessagepart.cpp:927
#6  0x00007fc71f80a0ec in ChatMessagePart::qt_metacall (this=0x2db4700, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7ffff3708160)
    at /var/tmp/portage/kde-base/kopete-4.3.0/work/kopete-4.3.0_build/kopete/kopete/chatwindow/chatmessagepart.moc:144
#7  0x00007fc72c12d175 in QMetaObject::activate (sender=0x2e210e0, from_signal_index=<value optimized out>, to_signal_index=6, argv=0x7ffff3708160) at kernel/qobject.cpp:3101
#8  0x00007fc72b1d3597 in QAction::triggered () from /usr/lib64/qt4/libQtGui.so.4
#9  0x00007fc72b1d4354 in QAction::activate () from /usr/lib64/qt4/libQtGui.so.4
#10 0x00007fc72b5a13ec in ?? () from /usr/lib64/qt4/libQtGui.so.4
#11 0x00007fc72b5a79bb in ?? () from /usr/lib64/qt4/libQtGui.so.4
#12 0x00007fc72cd79635 in KMenu::mouseReleaseEvent (this=0x2fb4230, e=0x7ffff3708dd0) at /var/tmp/portage/kde-base/kdelibs-4.3.0/work/kdelibs-4.3.0/kdeui/widgets/kmenu.cpp:456
#13 0x00007fc72b22c900 in QWidget::event () from /usr/lib64/qt4/libQtGui.so.4
#14 0x00007fc72b5a8c4b in QMenu::event () from /usr/lib64/qt4/libQtGui.so.4
#15 0x00007fc72b1d908d in QApplicationPrivate::notify_helper () from /usr/lib64/qt4/libQtGui.so.4
#16 0x00007fc72b1e2534 in QApplication::notify () from /usr/lib64/qt4/libQtGui.so.4
#17 0x00007fc72ccbcd31 in KApplication::notify (this=0x7ffff370a9e0, receiver=0x2fb4230, event=0x7ffff3708dd0)
    at /var/tmp/portage/kde-base/kdelibs-4.3.0/work/kdelibs-4.3.0/kdeui/kernel/kapplication.cpp:302
#18 0x00007fc72c11779c in QCoreApplication::notifyInternal (this=0x7ffff370a9e0, receiver=0x2fb4230, event=0x7ffff3708dd0) at kernel/qcoreapplication.cpp:606
#19 0x00007fc72b1e16a2 in QApplicationPrivate::sendMouseEvent () from /usr/lib64/qt4/libQtGui.so.4
#20 0x00007fc72b2434eb in ?? () from /usr/lib64/qt4/libQtGui.so.4
#21 0x00007fc72b241e05 in QApplication::x11ProcessEvent () from /usr/lib64/qt4/libQtGui.so.4
#22 0x00007fc72b2689a6 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#23 0x00007fc72c1163e2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -210720496}) at kernel/qeventloop.cpp:149
#24 0x00007fc72c11657c in QEventLoop::exec (this=0x7ffff370a950, flags={i = -210720416}) at kernel/qeventloop.cpp:197
#25 0x00007fc72c11b0fe in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#26 0x0000000000415d2c in main (argc=3, argv=0x7ffff370b828) at /var/tmp/portage/kde-base/kopete-4.3.0/work/kopete-4.3.0/kopete/kopete/main.cpp:104
Comment 2 Detlev Casanova 2009-08-21 23:11:55 UTC
SVN commit 1014205 by casanova:

Check if we have a proper manager and a proper view before closing it.

BUG:204526


 M  +2 -1      kopete/chatwindow/chatmessagepart.cpp  
 M  +1 -1      protocols/jabber/libiris/iris/jdns/jdns.c  
 M  +87 -60    protocols/jabber/ui/dlgchangepassword.ui  
 M  +34 -16    protocols/jabber/ui/dlgjabberchangepassword.cpp  
 M  +1 -0      protocols/jabber/ui/dlgjabberchangepassword.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1014205
Comment 3 Detlev Casanova 2009-08-21 23:19:41 UTC
SVN commit 1014208 by casanova:

Check if we have a proper manager and a proper view before closing it.

BUG:204526


 M  +2 -1      chatmessagepart.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1014208
Comment 4 Detlev Casanova 2009-08-22 18:24:13 UTC
SVN commit 1014372 by casanova:

Backport commit 1014207.

Check if we have a proper manager and a proper view before closing it.

BUG:204526



 M  +2 -1      chatmessagepart.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1014372