Check if we have a proper manager and a proper view before closing it.

BUG:204526

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1014205